# cura-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: astro.yml  ci.yml
docs/: package.json
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/styles/: global.css
src/: catalog.rs  cli.rs  commands.rs  install.rs  lib.rs  main.rs  metal.rs  model.rs  paths.rs  platform.rs  tui.rs
tests/: cli.rs
