[package]
name = "cura"
version = "0.1.0"
edition = "2024"
description = "CURA — a beautiful, interactive CUDA environment manager"
license = "MIT"
repository = "https://github.com/mindify-ai/cura-cli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
crossterm = "0.29"
dialoguer = "0.12"
dirs = "6.0"
fs2 = "0.4"
hex = "0.4"
indicatif = "0.18"
ratatui = "0.30"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.24"
toml = "0.9"
xz2 = "0.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[profile.release]
lto = "thin"
strip = true
